--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                    Hello<br>
                     My name is Nupur Sanoria from Hamirpur(Himachal Pradesh).
                 
-                   I have done my bachelor of Engineering in Civil .Currently,  I'm  pursuing full-stack web developer courses. 
+                   I have done my B-Tech in Civil Engineering .Currently,  I'm  pursuing full-stack web developer courses. 
                    
                 </p>
                 <br>
@@ -84,7 +84,7 @@
                         </li><br><br>
                         <li>Higher secondary (class 12th) was completed from D.S.M, Bara(Himachal Pradesh)
                             with a score of percentile - 84.4% </li><br><br>
-                        <li>I have completed my Bachelor of Engineering in Civil Branch from Government Engineering College Sundarnagar (Himachal Pradesh)
+                        <li>I have completed my B-Tech in Civil Engineering  Branch from Government Engineering College Sundarnagar (Himachal Pradesh)
               in the year 2021 with a score of CGPA- 7.78 </li><br><br>
                     </ul>
                 </p>
