--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <ul>
                     <li><h3>HTML</h3> </li><br>
                     <li><h3>CSS</h3></li><br>
-                    <li><h3>Basics of DSA</h3></li><br>
+                    <li><h3>Advance Data Structures</h3></li><br>
                     <li><h3>Basics of JAVA</h3></li><br>
                     
                     
